name:                HasShmup
version:             0.0.1.0
build-type:          Simple
cabal-version:       >=1.22.4

executable HasShmup
  main-is:             main.hs
  other-modules:       Bullet
                     , Draw
                     , Entity
                     , Player
                     , PlayerInput
                     , Vec
                     , World
  hs-source-dirs:      .
  build-depends:       base
                     , GLUT
                     , lens
                     , mtl
                     , OpenGL
                     , random
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
