name:                HasShmup
version:             0.0.1.0
build-type:          Simple
cabal-version:       >=1.22.4

executable HasShmup
  main-is:             Main.hs

  other-modules:       Bullet
                     , Draw
                     , Entity
                     , Math.Vec
                     , Player
                     , PlayerInput
                     , World

  hs-source-dirs:      src

  build-depends:       base
                     , containers
                     , GLUT
                     , lens
                     , mtl
                     , OpenGL
                     , random
                     , time

  default-language:    Haskell2010

  ghc-options:         -Wall -O2
